Add endpoints for adding wifiScan from tag and adding label from frontend Update location model to not include timeRecorded and temperatureSensor Update sensor config to only have weightThreshold Remove channel field from wifiScan objects Update isWorn calculation to not include temperatureSensor Update swagger and postman
